# lua_csound

./: .gitmodules  CMakeLists.txt  README.md  lua_csound.cpp  mlua.hpp
templates/: class.lua
test/: array_test.csd  array_test.lua  obj_test.csd  obj_test.lua  test.csd  test.lua
